--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,12 +19,17 @@ pool: Default
 steps:
 # Expose parameters as runtime variables
 
-- task: octane-start-task-private@1
-  condition: always()
+- task: octane-start-task@25
   inputs:
-    OctaneServiceConnection: 'octaneConnectionPrivate'
-    WorkspaceList: '1002'
+    OctaneServiceConnection: 'publicOctaneConnection'
+    WorkspaceList: '2001'
     CreatePipelineCheckbox: true
+
+- task: octane-test-runner-start-task@25
+  inputs:
+    OctaneServiceConnection: 'publicOctaneConnection'
+    WorkspaceList: '2001'
+    Framework: 'junit'
 
 - script: |
     echo "Hello!"
@@ -47,7 +52,7 @@ steps:
 
 # Optional step based on parameter
 
-- task: octane-end-task-private@1
+- task: octane-end-task@25
   inputs:
-    OctaneServiceConnection: 'octaneConnectionPrivate'
-    WorkspaceList: '1002'
+    OctaneServiceConnection: 'publicOctaneConnection'
+    WorkspaceList: '2001'
